--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -7,10 +7,13 @@ android {
     compileSdk {
         version = release(36)
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
 
     defaultConfig {
         applicationId "com.example.isltranslator"
-        minSdk 21
+        minSdk 24
         targetSdk 36
         versionCode 1
         versionName "1.0"
@@ -36,19 +39,25 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.3.0"
 
 // CameraX Lifecycle
+    implementation 'com.google.mediapipe:mediapipe-tasks-vision-hand-landmarker:0.10.8'
     implementation "androidx.camera:camera-lifecycle:1.3.0"
+    implementation 'org.tensorflow:tensorflow-lite:2.12.0' // latest stable
+    implementation 'org.tensorflow:tensorflow-lite-support:0.4.3' // for tensor conversion helpers
 
 // CameraX View
     implementation "androidx.camera:camera-view:1.3.0"
 
+
 // Guava (for ListenableFuture)
     implementation "com.google.guava:guava:31.1-android"
 
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.activity
-    implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.activity:activity-ktx:1.7.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
