--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -34,30 +34,36 @@ android {
 }
 
 dependencies {
-    // CameraX core library
+
+    // CameraX
     implementation "androidx.camera:camera-core:1.3.0"
     implementation "androidx.camera:camera-camera2:1.3.0"
-
-// CameraX Lifecycle
-    implementation 'com.google.mediapipe:mediapipe-tasks-vision-hand-landmarker:0.10.8'
     implementation "androidx.camera:camera-lifecycle:1.3.0"
-    implementation 'org.tensorflow:tensorflow-lite:2.12.0' // latest stable
-    implementation 'org.tensorflow:tensorflow-lite-support:0.4.3' // for tensor conversion helpers
-
-// CameraX View
     implementation "androidx.camera:camera-view:1.3.0"
 
+    // MediaPipe Tasks (CORRECT ONES)
+    implementation "com.google.mediapipe:tasks-vision:0.10.8"
+    implementation "com.google.mediapipe:tasks-core:0.10.8"
 
-// Guava (for ListenableFuture)
-    implementation "com.google.guava:guava:31.1-android"
+    // TensorFlow Lite
+    implementation "org.tensorflow:tensorflow-lite:2.12.0"
+    implementation "org.tensorflow:tensorflow-lite-support:0.4.3"
 
+    // UI
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.activity:activity-ktx:1.7.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
+}
+configurations.all {
+    resolutionStrategy {
+        force "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
+        force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22"
+        force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22"
+    }
 }
